--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "axios": "^0.25.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-player": "^2.9.0",
+    "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "sass": "^1.49.7",
+    "screenfull": "^6.0.1",
     "typescript": "^4.5.5",
     "web-vitals": "^2.1.4"
   },
